force-app/main/default/objects/CventEvents__RespondentTemp__c/CventEvents__RespondentTemp__c.object-meta.xml
<CustomObject>
    <description>Auxiliary object used for storing a fusion of contact and survey participation information retrieved from Cvent.</description>
    <label>Respondent Temp Record</label>
    <nameField>
        <displayFormat>RT-{00000000}</displayFormat>
        <label>Respondent Temp Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Respondent Temp Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>