force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_CCPARequester__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_CCPARequester__c</fullName>
    <label>(CCPA) &quot;Do Not Sell&quot; Requester</label>
    <length>100</length>
    <type>Text</type>
</CustomField>