force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_Company__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_Company__c</fullName>
    <label>Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>