force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_ContactTypeName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_ContactTypeName__c</fullName>
    <label>Contact Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>