force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_DataTransferBindings__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_DataTransferBindings__c</fullName>
    <description>Stores the serialized map of SF object type to the record Id created on data transfer.</description>
    <label>Data Transfer Bindings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>