force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_DataTransferMessage__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_DataTransferMessage__c</fullName>
    <description>Stores a list of errors that occurred during the data transfer flow.</description>
    <label>Data Transfer Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>