force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_Designation__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_Designation__c</fullName>
    <label>Designation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>