force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_Email__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>