force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_ExternalSystemId__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_ExternalSystemId__c</fullName>
    <description>Stores SF organization Id Cvent contact has been originated from.</description>
    <label>Salesforce System Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>