force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_HomePhone__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_HomePhone__c</fullName>
    <label>Home Phone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>