force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_HomeStateCode__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_HomeStateCode__c</fullName>
    <label>Home State Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>