force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_IntegrationId__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_IntegrationId__c</fullName>
    <description>Stores SF record Id survey invitation has been triggered for.</description>
    <label>Integration Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>