force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_LastName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_LastName__c</fullName>
    <label>Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>