force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_MembershipJoinDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_MembershipJoinDate__c</fullName>
    <label>Membership Join Date</label>
    <type>Date</type>
</CustomField>