force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_MembershipLastRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_MembershipLastRenewalDate__c</fullName>
    <label>Membership Last Renewal Date</label>
    <type>Date</type>
</CustomField>