force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_PassportCountryCode__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_PassportCountryCode__c</fullName>
    <label>Passport Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>