force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_Prefix__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_Prefix__c</fullName>
    <label>Prefix</label>
    <length>60</length>
    <type>Text</type>
</CustomField>