force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_PrimaryAddress2__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_PrimaryAddress2__c</fullName>
    <label>Primary Address 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>