force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_PrimaryCity__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_PrimaryCity__c</fullName>
    <label>Primary City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>