force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_PrimaryPostalCode__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_PrimaryPostalCode__c</fullName>
    <label>Primary Postal Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>