force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_RespondedDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_RespondedDate__c</fullName>
    <label>Responded Date</label>
    <type>DateTime</type>
</CustomField>