force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_RespondentCode__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_RespondentCode__c</fullName>
    <externalId>true</externalId>
    <label>Respondent Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>