force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_RespondentLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_RespondentLastModifiedDate__c</fullName>
    <label>Respondent Last Modified Date</label>
    <type>DateTime</type>
</CustomField>