force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_RespondentStatus__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_RespondentStatus__c</fullName>
    <label>Respondent Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>