force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_SurveyStub__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_SurveyStub__c</fullName>
    <externalId>true</externalId>
    <label>Survey Stub</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>