force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_Title__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_Title__c</fullName>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>