force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_TransactionId__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_TransactionId__c</fullName>
    <externalId>true</externalId>
    <label>Transaction Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>