force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_WorkCountryName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_WorkCountryName__c</fullName>
    <label>Work Country Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>