force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_WorkPostalCode__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_WorkPostalCode__c</fullName>
    <label>Work Postal Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>