force-app/main/default/objects/CventEvents__RespondentTemp__c/fields/CventEvents__pkg_WorkStateCode__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_WorkStateCode__c</fullName>
    <label>Work State Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>